--- a/materi.html
+++ b/materi.html
@@ -44,7 +44,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="../index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">ELEKTRONIKA</h1>
@@ -52,13 +52,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#about" >Tentang Elektronika</a></li>
-          <li><a href="lsp.html#lsp">LSP</a></li>
-          <li><a href="index.html#materi">Materi Elektronika</a></li>
-          <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
-          <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
-          <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
+          <li><a href="../index.html#about" >Tentang Elektronika</a></li>
+          <li><a href="../lsp.html#lsp">LSP</a></li>
+          <li><a href="../index.html#materi">Materi Elektronika</a></li>
+          <li><a href="../product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
+          <li><a href="../pkl.html#pkl">Praktik Kerja Lapangan</a></li>
+          <li><a href="../team.html#team">Team Elektronika</a></li>
+          <li><a href="../pinjam.html#alat">Peminjaman Alat</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -170,6 +170,215 @@
               </div>
             </div>
           </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/dasarlistrik1.html#dasarlistrik1" class="stretched-link">
+                  <h3>Dasar Listrik</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+           
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/dasarplc.html#dasarplc" class="stretched-link">
+                  <h3>Dasar PLC</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/konsepdasar.html#konsepdasar" class="stretched-link">
+                  <h3>Konsep Dasar</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/listrikelek.html#listrikelek" class="stretched-link">
+                  <h3> Dasar Listrik Elektronika</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/motorlistrik.html#motorlistrik" class="stretched-link">
+                  <h3> Motor Listrik</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/penyearah.html#penyearah" class="stretched-link">
+                  <h3> Penyearah</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/plclanjut.html#plclanjut" class="stretched-link">
+                  <h3> PLC lanjut</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/rangkaiandasar.html#rangkaiandasar" class="stretched-link">
+                  <h3> Rangkaian Dasar</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="bi bi-broadcast"></i>
+                </div>
+                <a href="../materi/teoridasar.html#teoridasar " class="stretched-link"></a>
+                  <h3> Teori Dasar</h3>
+                </a>
+                <ul>
+                  <li><span>
+
+                      </span>
+
+
+                </ul>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+        
 
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
