--- a/materi/listrikelek.html
+++ b/materi/listrikelek.html
@@ -43,7 +43,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="../index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">ELEKTRONIKA</h1>
@@ -51,13 +51,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#about" >Tentang Elektronika</a></li>
-          <li><a href="lsp.html#lsp">LSP</a></li>
-          <li><a href="index.html#materi">Materi Elektronika</a></li>
-          <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
-          <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
-          <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
+          <li><a href="../index.html#about" >Tentang Elektronika</a></li>
+          <li><a href="../lsp.html#lsp">LSP</a></li>
+          <li><a href="../index.html#materi">Materi Elektronika</a></li>
+          <li><a href="../product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
+          <li><a href="../pkl.html#pkl">Praktik Kerja Lapangan</a></li>
+          <li><a href="../team.html#team">Team Elektronika</a></li>
+          <li><a href="../pinjam.html#alat">Peminjaman Alat</a></li>
         
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -150,13 +150,13 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero" >Halaman Depan</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Tentang Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="materi.html#materi">Materi Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="team.html#team">Team Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="pinjam.html#alat">Peminjaman Alat</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../index.html#hero" >Halaman Depan</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../index.html#about">Tentang Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../materi.html#materi">Materi Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../pkl.html#pkl">Praktik Kerja Lapangan</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../team.html#team">Team Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="../pinjam.html#alat">Peminjaman Alat</a></li>
           </ul>
         </div>
 
