--- a/materi/motorlistrik.html
+++ b/materi/motorlistrik.html
@@ -75,10 +75,10 @@
       </div>
 
     </section><!-- /Hero Section -->
-    <section id="dasarlistrik1" class="team section light-background">
+    <section id="motorlistrik" class="team section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>Materi</h2>
-        <p>Materi ELEKTRONIKA : Teori Dasar Listrik 1<br></p>
+        <p>Materi ELEKTRONIKA : Dasar Motor Listrik<br></p>
         <h4 style="text-align: center;" >Sumber : Indonesia Australia Partnership for Skills Development Page 
           Batam Institutional Development Project
           Package for Electronic Components and Devices-FV.revision.doc<br></h4>
@@ -101,7 +101,7 @@
             </td>
 
         </table> -->
-        <object data="../assets/pdf/dasrlistrik.pdf" type="application/pdf" width="100%" height="600 align="center">
+        <object data="../assets/pdf/motorlistrik.pdf" type="application/pdf" width="100%" height="600 align="center">
           
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
