--- a/materi/rangkaiandasar.html
+++ b/materi/rangkaiandasar.html
@@ -68,17 +68,17 @@
  
   <main class="main">
     <!-- Hero Section -->
-    <section id="heros" class="hero section dark-background">
+    <section id="rangkaiandasar" class="hero section dark-background">
       
       <img src="assets/img/team1.jpg" alt="" data-aos="fade-in">
 
       </div>
 
     </section><!-- /Hero Section -->
-    <section id="dasarlistrik1" class="team section light-background">
+    <section id="teoridasar" class="team section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>Materi</h2>
-        <p>Materi ELEKTRONIKA : Teori Dasar Listrik 1<br></p>
+        <p>Materi ELEKTRONIKA : Rangkaian Dasar Listrik<br></p>
         <h4 style="text-align: center;" >Sumber : Indonesia Australia Partnership for Skills Development Page 
           Batam Institutional Development Project
           Package for Electronic Components and Devices-FV.revision.doc<br></h4>
@@ -101,7 +101,7 @@
             </td>
 
         </table> -->
-        <object data="../assets/pdf/dasrlistrik.pdf" type="application/pdf" width="100%" height="600 align="center">
+        <object data="../assets/pdf/rangkaiandasar.pdf" type="application/pdf" width="100%" height="600 align="center">
           
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
