--- a/lsp.html
+++ b/lsp.html
@@ -268,6 +268,8 @@
               <h5>Dokumentasi Kegiatan
               </h5>
               <img src="assets/img/lsp/lsp-3.jpg" class="img-fluid rounded-4 mb-4" alt="">
+              <a href="https://youtu.be/HuH9TCFdwBg"
+                  class="glightbox pulsating-play-btn"></a>
             </div>
 
 
