--- a/lsp.html
+++ b/lsp.html
@@ -147,81 +147,81 @@
                       <tr>
                         <th scope="row">1</th>
                         <td>C.26EPP00.016.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Membaca dan Mengidentifikasi Komponen Elektronika
+                        <td><a href="../lsp/cp1.html#cp1">Membaca dan Mengidentifikasi Komponen Elektronika
                             Pasif</a></td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
                         <td>C.26EPP00.017.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Membaca dan Mengidentifikasi Komponen Elektronika
+                        <td><a href="../lsp/cp13.html#cp13">Membaca dan Mengidentifikasi Komponen Elektronika
                             Aktif
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
                         <td>C.26EPP00.018.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Merancang Rangkaian Elektronika Dasar
+                        <td><a href="../lsp/cp8.html#cp8">Merancang Rangkaian Elektronika Dasar
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">4</th>
                         <td>C.26EPP00.020.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Merancang Prototipe Elektronika pada Protoboard</a>
+                        <td><a href="../lsp/cp11.html#cp11">Merancang Prototipe Elektronika pada Protoboard</a>
                         </td>
                       </tr>
                       <tr>
                         <th scope="row">5</th>
                         <td>C.26EPP00.021.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Menggambar Layout Printed Circuit Board (PCB) Dengan
+                        <td><a href="../lsp/cp5.html#cp5">Menggambar Layout Printed Circuit Board (PCB) Dengan
                             Menggunakan Software
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">6</th>
                         <td>C.26EPP00.026.1 </td>
-                        <td><a href="kelistrikan.html#kelistrikan">Melakukan pabrikasi PCB Secara Manual
+                        <td><a href="../lsp/cp6.html#cp6">Melakukan pabrikasi PCB Secara Manual
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">7</th>
                         <td>C.26EPP00.010.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Mengoperasikan Peralatan ukur Elektronika</a></td>
+                        <td><a href="../lsp/cp7.html#cp7">Mengoperasikan Peralatan ukur Elektronika</a></td>
                       </tr>
                       <tr>
                         <th scope="row">8</th>
                         <td>C.26EPP00.004.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Memasang Komponen Elektronika pada PCB Secara Manual
+                        <td><a href="../lsp/cp8.html#cp8">Memasang Komponen Elektronika pada PCB Secara Manual
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">9</th>
                         <td>C.26EPP00.005.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Melakukan Teknik Penyolderan Lead-Free Komponen
+                        <td><a href="../lsp/cp9.html#cp9">Melakukan Teknik Penyolderan Lead-Free Komponen
                             Through Hole pada PCB
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">10</th>
                         <td>C.26EPP00.001.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Menerapkan Prosedur Keamanan, Kesehatan dan
+                        <td><a href="../lsp/cp10.html#cp10">Menerapkan Prosedur Keamanan, Kesehatan dan
                             Keselamatan Kerja (K3) Elektronika</a></td>
                       </tr>
                       <tr>
                         <th scope="row">11</th>
                         <td>C.26EPP00.003.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Memelihara Kebersihan Tempat Kerja Elektronika
+                        <td><a href="../lsp/cp11.html#cp11">Memelihara Kebersihan Tempat Kerja Elektronika
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">12</th>
                         <td>C.26EPP00.002.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Memelihara peralatan kerja elektronika
+                        <td><a href="../lsp/cp12.html#cp12">Memelihara peralatan kerja elektronika
                           </a></td>
                       </tr>
                       <tr>
                         <th scope="row">13</th>
                         <td>C.26EPP00.007.1</td>
-                        <td><a href="kelistrikan.html#kelistrikan">Memasang Pengkabelan/Wiring Assembly Elektronika</a>
+                        <td><a href="../lsp/cp2.html#cp2">Memasang Pengkabelan/Wiring Assembly Elektronika</a>
                         </td>
                       </tr>
 
@@ -383,116 +383,7 @@
 
     </section>
 
-    <!-- Services Section -->
-    <section id="materi" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Materi</h2>
-        <p>LSP<br></p>
-      </div><!-- End Section Title -->
-
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-
-        <div class="row gy-5">
-
-          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-            <div class="service-item">
-              <div class="img">
-                <img src="assets/img/services-1.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="details position-relative">
-                <div class="icon">
-                  <i class="bi bi-activity"></i>
-                </div>
-                <a href="kelistrikan.html#kelistrikan" class="stretched-link">
-                  <h3>Listrik Dasar</h3>
-                </a>
-                <ul>
-                  <li><span>Tegangan (V) → beda potensial listrik, satuan Volt (V).
-                    </span></li>
-                  <li><span>Arus (I) → aliran muatan listrik, satuan Ampere (A).
-                    </span></li>
-                  <li><span>Hambatan (R) → tahanan terhadap aliran listrik, satuan Ohm (Ω)..
-                    </span></li>
-                  <li><span> Daya (P) → energi listrik per waktu, satuan Watt (W).
-                    </span></li>
-
-                </ul>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-            <div class="service-item">
-              <div class="img">
-                <img src="assets/img/services-2.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="details position-relative">
-                <div class="icon">
-                  <i class="bi bi-broadcast"></i>
-                </div>
-                <a href="alatukur.html#alatukur" class="stretched-link">
-                  <h3>Alat Ukur</h3>
-                </a>
-                <ul>
-                  <li><span>
-
-                      Alat ukur elektronik adalah perkakas yang dirancang untuk mendeteksi dan mengukur berbagai besaran
-                      atau parameter listrik dan elektronika, seperti tegangan, arus, daya, dan hambatan.
-                    </span>
-
-
-                </ul>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-            <div class="service-item">
-              <div class="img">
-                <img src="assets/img/services-3.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="details position-relative">
-                <div class="icon">
-                  <i class="bi bi-easel"></i>
-                </div>
-                <a href="pasif.html#pasif" class="stretched-link">
-                  <h3>Komponen Aktif & Pasif</h3>
-                </a>
-                <ul>
-                  <li><span>
-
-                      Dioda: mengalirkan arus satu arah.
-                    </span>
-
-
-                  <li><span>
-
-                      Resistor: membatasi arus listrik.
-                    </span>
-                  <li><span>Kapasitor: menyimpan energi dalam bentuk medan listrik.
-                    </span>
-
-
-                </ul>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="details position-center">
-
-            <a href="materi.html#materi" class="btn-get-started">Materi Lainnya</a>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- /Services Section -->
+  
 
 
 
