--- a/index.html
+++ b/index.html
@@ -323,17 +323,18 @@
                 <a href="kelistrikan.html#kelistrikan" class="stretched-link">
                   <h3>Listrik Dasar</h3>
                 </a>
-                <!-- <ul>
-                  <li><span>Tegangan (V) → beda potensial listrik, satuan Volt (V).
+                <ul>
+                  <li></li>
+                  <!-- <li><span>Tegangan (V) → beda potensial listrik, satuan Volt (V).
                     </span></li>
                   <li><span>Arus (I) → aliran muatan listrik, satuan Ampere (A).
                     </span></li>
                   <li><span>Hambatan (R) → tahanan terhadap aliran listrik, satuan Ohm (Ω)..
                     </span></li>
                   <li><span> Daya (P) → energi listrik per waktu, satuan Watt (W).
-                    </span></li>
+                    </span></li> -->
 
-                </ul> -->
+                </ul>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -350,15 +351,16 @@
                 <a href="alatukur.html#alatukur" class="stretched-link">
                   <h3>Alat Ukur</h3>
                 </a>
-                <!-- <ul>
-                  <li><span>
+                <ul>
+                  <li></li>
+                  <!-- <li><span>
 
                       Alat ukur elektronik adalah perkakas yang dirancang untuk mendeteksi dan mengukur berbagai besaran
                       atau parameter listrik dan elektronika, seperti tegangan, arus, daya, dan hambatan.
-                    </span>
+                    </span> -->
                  
 
-                </ul> -->
+                </ul>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -375,8 +377,9 @@
                 <a href="pasif.html#pasif" class="stretched-link">
                   <h3>Komponen Aktif & Pasif</h3>
                 </a>
-                <!-- <ul>
-                  <li><span>
+                <ul>
+                  <li></li>
+                  <!-- <li><span>
 
                       Dioda: mengalirkan arus satu arah.
                     </span>
@@ -387,10 +390,10 @@
                       Resistor: membatasi arus listrik.
                     </span>
                   <li><span>Kapasitor: menyimpan energi dalam bentuk medan listrik.
-                    </span>
+                    </span> -->
 
 
-                </ul> -->
+                </ul>
               </div>
             </div>
           </div><!-- End Service Item -->
