--- a/materi.html
+++ b/materi.html
@@ -255,7 +255,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+                <img src="assets/img/materi/dasar.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -347,7 +347,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/materi/alatukur.jpg" class="img-fluid" alt="">
+                <img src="assets/img/materi/motor.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
